# ermis-mls-demo

./: Cargo.toml
client/: Cargo.toml
client/src/: backend.rs  identity.rs  long_polling.rs  main.rs  networking.rs  user.rs  ws_client.rs
server/: Cargo.toml
server/src/: main.rs
