[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"

openmls = { path = "../../openmls/openmls", features = ["test-utils"] }
ds-lib = { path = "../../openmls/delivery-service/ds-lib" }
openmls_traits = { path = "../../openmls/traits" }
openmls_rust_crypto = { path = "../../openmls/openmls_rust_crypto" }
openmls_memory_storage = { path = "../../openmls/memory_storage", features = [
    "persistence",
] }
openmls_basic_credential = { path = "../../openmls/basic_credential" }
serde = { version = "^1.0" }
thiserror = "1.0"
serde_json = "1.0"
rand_chacha = { version = "0.3.1" }
tungstenite = {version = "0.16.0", features = ["native-tls"]}
futures-util = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-channel = "0.3.30"
anyhow = "1.0.86"



[dependencies.termion]
version = "1.5"
git = "https://gitlab.redox-os.org/Jezza/termion.git"
branch = "windows-support"
