[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.0"
actix-web = "4"
futures-core = "0.3"
futures-util = "0.3"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
clap = "4"
base64 = "0.13"

openmls = { path = "../../openmls/openmls", features = ["test-utils"] }

ds-lib = { path = "../../openmls/delivery-service/ds-lib" }
openmls_rust_crypto = { path = "../../openmls/openmls_rust_crypto" }
openmls_traits = { path = "../../openmls/traits" }
openmls_basic_credential = { path = "../../openmls/basic_credential" }
tokio = {version = "*", features = ["full"]}
tokio-tungstenite = "0.23.0"
tungstenite = "0.23.0"